# IsoPE_detect

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.cmake-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
.cmake-debug/Testing/Temporary/: CTestCostData.txt
build_cmake_tools/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_cmake_tools/app/: Makefile  cmake_install.cmake
build_cmake_tools/src/: Makefile  cmake_install.cmake
development_phase/data/cleaned/: benign_test_clean.parquet  benign_val_clean.parquet  iforest_benign_test_clean.parquet  iforest_benign_val_clean.parquet  iforest_malware_test_clean.parquet  iforest_malware_val_clean.parquet  malware_test_clean.parquet  malware_val_clean.parquet
development_phase/data/optimized/: benign_test_optimized.csv  benign_test_optimized.parquet  benign_train_optimized.parquet  benign_val_optimized.csv  benign_val_optimized.parquet  iforest_ben_test.csv  iforest_ben_test.parquet  iforest_ben_train.parquet  iforest_ben_val.csv  iforest_ben_val.parquet  iforest_benign_test_optimized.csv  iforest_benign_test_optimized.parquet  iforest_benign_train_optimized.parquet  iforest_benign_val_optimized.csv  iforest_benign_val_optimized.parquet  iforest_mal_test.csv  iforest_mal_test.parquet  iforest_mal_val.csv  iforest_mal_val.parquet  iforest_malware_test_optimized.csv  iforest_malware_test_optimized.parquet  iforest_malware_val_optimized.csv  iforest_malware_val_optimized.parquet  malware_test_optimized.csv  malware_test_optimized.parquet  malware_val_optimized.csv  malware_val_optimized.parquet
development_phase/data/raw/: benign_test_raw.parquet  benign_val_raw.parquet  iforest_benign_test_raw.parquet  iforest_benign_val_raw.parquet  iforest_malware_test_raw.parquet  iforest_malware_val_raw.parquet  malware_test_raw.parquet  malware_val_raw.parquet
development_phase/docs/: DEVELOPMENT_PHASE.md  DEVELOPMENT_PHASE_GUIDE.md  config_parameters.md  feature_selection_pipeline.md  iterative_optimization_plan.md  malware_val_test_independence_assessment.md  model_config_parameters.md
development_phase/reports/: feature_selection_report.md  if_quantized_cpp_raw_pe_eval.json  if_quantized_cpp_raw_pe_eval.txt  if_quantized_cpp_raw_pe_eval_calibrated.txt  if_quantized_cpp_raw_pe_eval_no_calibration.txt  malware_val_test_cluster_report.md  malware_val_test_embedding.csv  malware_val_test_independence_manifest_stage2.json  malware_val_test_independence_metrics_stage3.json  optimization_results.csv  optimized_features.csv  optimized_params.json  python_quantized_rebuild_eval.json
development_phase/results/: README.md  benchmarks.json  feature_group_mapping.json  feature_names.json  iforest_feature_schema.json  iforest_optimized_config.json  iforest_optimized_features.json  iforest_scaler_params.json  model_engine_config.json  optimized_feature_list.json  scaler_params.json  threshold.json
development_phase/schemas/: feature_group_mapping.json  feature_schema.json  feature_schema_selected.json
development_phase/src/: feature_extraction.py  feature_extraction_config.json  feature_selection.py  feature_selection_config.json  if_plain_float_eval.cpp  if_quantized_cpp_raw_pe_eval.cpp  model_config.json  model_optimization.py  pipeline_config.json  rebuild_iforest_quantized_eval.py
development_phase/src/__pycache__/: extended_isolation_forest._c_factor_numba-34.py312.1.nbc  extended_isolation_forest._c_factor_numba-34.py312.nbi  extended_isolation_forest._path_length_batch-44.py312.1.nbc  extended_isolation_forest._path_length_batch-44.py312.nbi
docs/: MODEL_ENGINE_BUILD_RUN.md  README.md  malware_val_test_independence_assessment.md
embedded_phase/core/: STL_MCU.h  initializer_list.h
embedded_phase/core/base/: eml_base.h  eml_debug.h  eml_random.h  eml_status.h
embedded_phase/core/containers/: STL_MCU.h  (+2 more)
embedded_phase/docs/: EMBEDDED_PHASE.md  EMBEDDED_PHASE_DESIGN.md  EML_DATA_FILE_FORMAT.md  IF_MODEL_FILE_FORMAT.md  isolation_forest_errcode_refactor_plan.md
embedded_phase/src/feature_extractor/: CMakeLists.txt  README.md  build.sh  compare_cpp_python.py  compiled_feature_config.hpp  generate_compiled_features.py  lief_feature_extractor.cpp
embedded_phase/src/feature_extractor/app/: CMakeLists.txt  pe_feature_extractor_cli.cpp
embedded_phase/src/feature_extractor/include/extractor/: extractor.hpp  resource_limits.hpp
embedded_phase/src/feature_extractor/src/: CMakeLists.txt  pe_extractor.cpp
embedded_phase/src/feature_extractor/validation/: cpp_processing_time.csv  feature_parity_details.csv  parity_summary.json
embedded_phase/src/model_engine/: CMakeLists.txt  MODEL_ENGINE_BUILD_RUN.md  plot_roc.py
embedded_phase/src/model_engine/app/: CMakeLists.txt  endpoint_agent_capi_sample.cpp  model_engine_benchmark_cli.cpp  model_engine_cli.cpp
embedded_phase/src/model_engine/include/: model_engine.hpp  model_engine_c.h
embedded_phase/src/model_engine/results/: if_benchmark_report.md  if_evaluation_summary.json  if_model_engine_eval_ubuntu.json  if_model_engine_eval_windows.json  if_test_scores.json
embedded_phase/src/model_engine/src/: CMakeLists.txt  model_engine.cpp  model_engine_c.cpp
embedded_phase/src/model_engine/test/: CMakeLists.txt  model_engine_tests.cpp
embedded_phase/test_benchmark/: packed_vector_test.cpp  test_idvector  test_idvector.cpp
report/: README.md
reports/: README.md  pe_raw_benchmark.json  raw_pe_eval_report_4bit.md
tools/: README.md  download_malware_config.json
tools/data_quantization/: .gitignore  Makefile  README.md  processing_data  processing_data.cpp  quantization_config.json
tools/download_datasets/: README.md  download_malware.py
tools/model_tester/: .gitignore  README.md  if_quantized_cpp_raw_pe_eval.cpp  if_quantized_cpp_raw_pe_eval_report.py
tools/preprocessing/: README.md  process_dataset.py  process_dataset_config.json
tools/reporting/: README.md  generate_raw_pe_eval_report.py
tools/resource_prepairer/: README.md  prepare_datasets.py  resource_prepairer_config.json
(+94 files in other folders)
