cmake_minimum_required(VERSION 3.18)

project(pe_feature_extractor LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(FEATURE_EXTRACTOR_FETCH_LIEF "Fetch LIEF from GitHub if not found locally" ON)

find_package(LIEF QUIET CONFIG)

if(NOT TARGET LIEF::LIEF)
  set(FEATURE_EXTRACTOR_LOCAL_LIEF_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../third_party/LIEF")
  set(FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD "${FEATURE_EXTRACTOR_LOCAL_LIEF_ROOT}/build")
  set(FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS "${FEATURE_EXTRACTOR_LOCAL_LIEF_ROOT}/build_windows")
  set(FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64 "${FEATURE_EXTRACTOR_LOCAL_LIEF_ROOT}/build_windows_x64")

  if(WIN32)
    set(FEATURE_EXTRACTOR_LIEF_SEARCH_PATHS
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}/Release
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}/lib
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}/Release
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}/lib
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}/Release
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}/lib
    )
  else()
    set(FEATURE_EXTRACTOR_LIEF_SEARCH_PATHS
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}/Release
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}/lib
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}/Release
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}/lib
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}/Release
      ${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}/lib
    )
  endif()

  find_library(FEATURE_EXTRACTOR_LIEF_LIBRARY
    NAMES LIEF libLIEF
    PATHS ${FEATURE_EXTRACTOR_LIEF_SEARCH_PATHS}
    NO_DEFAULT_PATH
  )

  if(FEATURE_EXTRACTOR_LIEF_LIBRARY)
    set(FEATURE_EXTRACTOR_LIEF_INCLUDE_DIRS
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_ROOT}/include"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_ROOT}/src"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}/include"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS_X64}"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}/include"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD_WINDOWS}"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}/include"
      "${FEATURE_EXTRACTOR_LOCAL_LIEF_BUILD}"
    )

    set(FEATURE_EXTRACTOR_LIEF_INCLUDE_DIRS_EXISTING "")
    foreach(_dir IN LISTS FEATURE_EXTRACTOR_LIEF_INCLUDE_DIRS)
      if(EXISTS "${_dir}")
        list(APPEND FEATURE_EXTRACTOR_LIEF_INCLUDE_DIRS_EXISTING "${_dir}")
      endif()
    endforeach()

    add_library(LIEF::LIEF UNKNOWN IMPORTED)
    set_target_properties(LIEF::LIEF PROPERTIES
      IMPORTED_LOCATION "${FEATURE_EXTRACTOR_LIEF_LIBRARY}"
      INTERFACE_INCLUDE_DIRECTORIES "${FEATURE_EXTRACTOR_LIEF_INCLUDE_DIRS_EXISTING}"
    )

    if(UNIX AND NOT APPLE)
      set_property(TARGET LIEF::LIEF APPEND PROPERTY
        INTERFACE_LINK_LIBRARIES "dl;pthread;z"
      )
    endif()
  endif()
endif()

if(NOT TARGET LIEF::LIEF AND FEATURE_EXTRACTOR_FETCH_LIEF)
  include(FetchContent)

  set(LIEF_DOC OFF CACHE BOOL "" FORCE)
  set(LIEF_PYTHON_API OFF CACHE BOOL "" FORCE)
  set(LIEF_EXAMPLES OFF CACHE BOOL "" FORCE)
  set(LIEF_TESTS OFF CACHE BOOL "" FORCE)
  set(LIEF_C_API OFF CACHE BOOL "" FORCE)
  set(LIEF_RUST_API OFF CACHE BOOL "" FORCE)
  set(LIEF_INSTALL OFF CACHE BOOL "" FORCE)

  FetchContent_Declare(
    LIEF
    GIT_REPOSITORY https://github.com/lief-project/LIEF.git
    GIT_TAG main
  )
  FetchContent_MakeAvailable(LIEF)

  if(NOT TARGET LIEF::LIEF AND TARGET LIB_LIEF)
    add_library(LIEF::LIEF ALIAS LIB_LIEF)
  endif()
endif()

if(NOT TARGET LIEF::LIEF)
  message(FATAL_ERROR "LIEF not found. Install LIEF or configure with -DFEATURE_EXTRACTOR_FETCH_LIEF=ON")
endif()

set(FEATURE_EXTRACTOR_MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(src)
add_subdirectory(app)
