cmake_minimum_required(VERSION 3.18)

project(pe_model_engine LANGUAGES CXX)

option(PE_MODEL_ENGINE_BUILD_APPS "Build model engine CLI apps" ON)
option(PE_MODEL_ENGINE_BUILD_TESTS "Build model engine tests" ON)

find_package(LIEF QUIET CONFIG)

if(NOT TARGET LIEF::LIEF)
  set(PE_MODEL_ENGINE_LOCAL_LIEF_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../third_party/LIEF")
  set(PE_MODEL_ENGINE_LOCAL_LIEF_BUILD "${PE_MODEL_ENGINE_LOCAL_LIEF_ROOT}/build")
  set(PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS "${PE_MODEL_ENGINE_LOCAL_LIEF_ROOT}/build_windows")
  set(PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64 "${PE_MODEL_ENGINE_LOCAL_LIEF_ROOT}/build_windows_x64")

  if(WIN32)
    set(PE_MODEL_ENGINE_LIEF_SEARCH_PATHS
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}/Release
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}/lib
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}/Release
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}/lib
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}/Release
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}/lib
    )
  else()
    set(PE_MODEL_ENGINE_LIEF_SEARCH_PATHS
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}/Release
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}/lib
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}/Release
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}/lib
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}/Release
      ${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}/lib
    )
  endif()

  find_library(PE_MODEL_ENGINE_LIEF_LIBRARY
    NAMES LIEF libLIEF
    PATHS ${PE_MODEL_ENGINE_LIEF_SEARCH_PATHS}
    NO_DEFAULT_PATH
  )

  if(PE_MODEL_ENGINE_LIEF_LIBRARY)
    set(PE_MODEL_ENGINE_LIEF_INCLUDE_DIRS
      "${PE_MODEL_ENGINE_LOCAL_LIEF_ROOT}/include"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_ROOT}/src"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}/include"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD}"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}/include"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS}"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}/include"
      "${PE_MODEL_ENGINE_LOCAL_LIEF_BUILD_WINDOWS_X64}"
    )

    set(PE_MODEL_ENGINE_LIEF_INCLUDE_DIRS_EXISTING "")
    foreach(_dir IN LISTS PE_MODEL_ENGINE_LIEF_INCLUDE_DIRS)
      if(EXISTS "${_dir}")
        list(APPEND PE_MODEL_ENGINE_LIEF_INCLUDE_DIRS_EXISTING "${_dir}")
      endif()
    endforeach()

    add_library(LIEF::LIEF UNKNOWN IMPORTED)
    set_target_properties(LIEF::LIEF PROPERTIES
      IMPORTED_LOCATION "${PE_MODEL_ENGINE_LIEF_LIBRARY}"
      INTERFACE_INCLUDE_DIRECTORIES "${PE_MODEL_ENGINE_LIEF_INCLUDE_DIRS_EXISTING}"
    )

    if(UNIX AND NOT APPLE)
      set_property(TARGET LIEF::LIEF APPEND PROPERTY
        INTERFACE_LINK_LIBRARIES "dl;pthread;z"
      )
    endif()
  endif()
endif()

if(NOT TARGET LIEF::LIEF)
  message(FATAL_ERROR "LIEF not found. Build third_party/LIEF or provide LIEF package config.")
endif()

add_subdirectory(src)

if(PE_MODEL_ENGINE_BUILD_APPS)
  add_subdirectory(app)
endif()

if(PE_MODEL_ENGINE_BUILD_TESTS)
  add_subdirectory(test)
endif()
